# vmlight

./: .gitignore  Makefile  README.md  __main__.py  deploy.py  pyproject.toml  xen.py
completions/: vmlight
conf/: ssh_key_store  vmlight.conf
debian/: changelog  control  copyright  install  rules
scripts/: build_deb.sh
src/vmlight/: __main__.py  args.py  deploy.py  helpers.py  image.py  ssh.py  utils.py  vm.py  xen.py
