[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "vmlight"
version = "0.1.0"
description = "Lightweight VM management tool"
authors = [
    { name="Troels Folke", email="troelsmf@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
vmlight = "vmlight.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

#[tool.setuptools.data-files]
#"etc/vmlight" = ["conf/vmlight.conf", "conf/ssh_key_store"]
#"var/lib/vmlight/images" = []
#"var/lib/vmlight/instances" = []