[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmlight"
version = "0.1.0"
description = "Lightweight VM management tool"
authors = [
    { name="Troels Folke", email="troelsmf@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
vmlight = "vmlight.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vmlight = ["completions/*"]

# To install the completion file during pip install
[tool.setuptools.data-files]
"share/bash-completion/completions" = ["completions/vmlight"]
"etc/vmlight" = ["conf/vmlight.conf", "conf/ssh_key_store"]

#[tool.setuptools.data-files]
#"var/lib/vmlight/images" = []
#"var/lib/vmlight/instances" = []